--- a/index.html
+++ b/index.html
@@ -100,7 +100,64 @@
         </div>
       </div>
     </section>
+    <section id="our">
+      <div class="container">
+        <div class="our">
+          <div class="our-text">
+            <h1>New Our <span>Products</span></h1>
+            <p>Have time to buy the most harmonious drinks in the new Starbucks coffee and don't forget about the discount!  Starbucks coffee and don't forget about the discount!</p>
+          </div>
+          <div class="box-card">
+            <div class="card">
+              <div class="bac-card-cofee">
+                <img
+                  src="./image/browm coffe.svg"
+                  alt=""
+                />
+              </div>
+              <h2>Fast</h2>
+              <p>Our cafe will serve you quickly</p>
+              <div class="price">
+                <h2>7,45$</h2>
+                <p>330 ml</p>
+              </div>
+              <button>Buy Product</button>
+            </div>
 
+            <div class="card">
+              <div class="bac-card-cofee">
+                <img
+                  src="./image/yello coffe.svg"
+                  alt=""
+                />
+              </div>
+              <h2>Fast</h2>
+              <p>Our cafe will serve you quickly</p>
+              <div class="price">
+                <h2>7,45$</h2>
+                <p>330 ml</p>
+              </div>
+              <button>Buy Product</button>
+            </div>
+            <div class="card">
+              <div class="bac-card-cofee">
+                <img
+                  src="./image/green coffe.svg"
+                  alt=""
+                />
+              </div>
+              <h2>Cappuccino</h2>
+              <p>Our cafe will serve you quickly</p>
+              <div class="price">
+                <h2>7,45$</h2>
+                <p>330 ml</p>
+              </div>
+              <button>Buy Product</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
