--- a/index.html
+++ b/index.html
@@ -158,7 +158,16 @@
         </div>
       </div>
     </section>
-
+     <section id="event">
+      <div class="container">
+        <div class="event">
+          <div class="event-text">
+            <p>Only in 2021 we have made more than 100,000 orders for you, your loved ones, all of you, and in 2022 we are ready to destroy the market</p>
+            <h1>Our New <span>Events</span></h1>
+          </div>
+        </div>
+      </div>
+     </section>
 
 
 
