--- a/index.html
+++ b/index.html
@@ -165,6 +165,28 @@
             <p>Only in 2021 we have made more than 100,000 orders for you, your loved ones, all of you, and in 2022 we are ready to destroy the market</p>
             <h1>Our New <span>Events</span></h1>
           </div>
+          <div class="event-lines">
+            <div class="two-coffe">
+              <h2>TWO COFFEE FOR 1 PRICE</h2>
+              <button>More</button>
+            </div>
+            <div class="kit">
+              <h2>KITCHEN TOUR</h2>
+              <button>More</button>
+            </div>
+            <div class="free">
+              <h2>FREE COFFEE FOR 3 COFFEE</h2>
+              <button>More</button>
+            </div>
+            <div class="ourinst">
+              <h2>OUR INSTAGRAM</h2>
+              <button>More</button>
+            </div>
+            <div class="where">
+              <h2>WHERE ARE YOU CHOOSE US?</h2>
+              <button>More</button>
+            </div>
+          </div>
         </div>
       </div>
      </section>
