--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             <h1>Our New <span>Events</span></h1>
           </div>
           <div class="event-lines">
+           <div class="line-top">
             <div class="two-coffe">
               <h2>TWO COFFEE FOR 1 PRICE</h2>
               <button>More</button>
@@ -174,6 +175,8 @@
               <h2>KITCHEN TOUR</h2>
               <button>More</button>
             </div>
+           </div>
+           <div class="line-bottom">
             <div class="free">
               <h2>FREE COFFEE FOR 3 COFFEE</h2>
               <button>More</button>
@@ -186,11 +189,24 @@
               <h2>WHERE ARE YOU CHOOSE US?</h2>
               <button>More</button>
             </div>
+           </div>
           </div>
         </div>
       </div>
      </section>
-
+     <section id="contac">
+      <div class="container">
+        <div class="contac">
+          <div class="contac-text">
+            <h1>Our <span>Contacts</span></h1>
+            <p>Have time to buy the most harmonious drinks in the new Starbucks coffee and don't forget about the discount!</p>
+            <h3><img src="./image/inst.svg" alt="">@supercoffee</h3>
+            <h3><img src="./image/call.svg" alt=""></a>+7-999-999-99-99</h3>
+          </div>
+          <img src="./image/we last.svg" alt="img">
+        </div>
+      </div>
+     </section>
 
 
 
