--- a/index.html
+++ b/index.html
@@ -207,7 +207,49 @@
         </div>
       </div>
      </section>
-
+<footer id="footer">
+        <div class="container">
+          <div class="footer">
+            <div class="footer-menu">
+              <h3>StarBucks</h3>
+              <div class="menu-box-footer">
+                <p>Main</p>
+                <p>Buy</p>
+                <p>More</p>
+              </div>
+              <div class="menu-box-footer">
+                <p>We make</p>
+                <p>Process</p>
+              </div>
+              <div class="menu-box-footer">
+                <p>Products</p>
+                <p>Cappuccino</p>
+                <p>Fast</p>
+                <p>Fast</p>
+              </div>
+              <div class="menu-box-footer">
+                <p>Events</p>
+                <p>Drinks</p>
+                <p>Eat</p>
+              </div>
+              <div class="menu-box-footer">
+                <p>Contacts</p>
+                <p>Instagram</p>
+                <p>Number</p>
+              </div>
+              <div class="row-icons">
+                <img src="/image/Arrow 1.png" alt="" />
+              </div>
+            </div>
+            <div class="footer-number">
+              <h3>+7-999-999-99-99</h3>
+              <div class="inst-logo">
+                <ion-icon class="logo-inst" name="logo-instagram"></ion-icon>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
 
 
 
